Fix some drag issues on IE 8 and 9

--- a/web/styles/ie.css
+++ b/web/styles/ie.css
@@ -10,7 +10,8 @@ aside#progressbar > div {
     filter:alpha(opacity=50);
 }
 
-.zone {
-    background: white;
-    filter:alpha(opacity=100);
+.navwin .zone {
+  background: white!important;
+  opacity: 0!important;
+  filter:alpha(opacity=0);
 }
